--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         border-radius: 12px;
         margin: 20px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        flex-wrap: wrap;
       }
       .category {
         text-align: center;
@@ -120,6 +121,8 @@
         display: flex;
         gap: 20px;
         z-index: 999;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .icon-button {
         background: linear-gradient(145deg, #ff416c, #ff4b2b);
@@ -194,6 +197,34 @@
       }
       .start-shopping button:hover {
         transform: scale(1.05);
+      }
+
+      /* 📱 Responsive Fixes */
+      @media (max-width: 600px) {
+        header img {
+          height: 60px;
+        }
+        .category img {
+          width: 50px;
+          height: 50px;
+        }
+        .section {
+          flex-direction: column;
+          text-align: center;
+        }
+        .middle img {
+          max-width: 100%;
+        }
+        .start-shopping button {
+          width: 100%;
+          font-size: 16px;
+        }
+      }
+      @media (min-width: 601px) and (max-width: 1024px) {
+        .section {
+          flex-direction: column;
+          text-align: center;
+        }
       }
     </style>
   </head>
@@ -281,11 +312,9 @@
       </div>
     </div>
 
-    <!-- more sections (Ghee, Milk, Butter, Paneer) same style -->
-
     <div class="start-shopping">
       <button onclick="enterStore()">Start Shopping 🛒</button>
-      <a href="./admin.html"><button>admin</button></a>
+      <a href="./admin.html"><button>Admin</button></a>
     </div>
 
     <script>
