--- a/category.html
+++ b/category.html
@@ -79,19 +79,19 @@
         overflow-y: auto;
         padding: 15px;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-        gap: 15px;
+        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+        gap: 12px;
         justify-content: center;
       }
       .card {
         background: #fff;
         border-radius: 10px;
         box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
-        padding: 10px;
+        padding: 8px;
         text-align: center;
         transition: transform 0.3s;
-        width: 160px; /* FIXED WIDTH */
-        height: 220px; /* FIXED HEIGHT */
+        width: 120px; /* FIXED SMALLER WIDTH */
+        height: 170px; /* FIXED SMALLER HEIGHT */
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -101,26 +101,26 @@
       }
       .card img {
         width: 100%;
-        height: 100px; /* FIXED IMAGE HEIGHT */
+        height: 80px; /* SMALLER IMAGE HEIGHT */
         object-fit: cover;
-        border-radius: 8px;
+        border-radius: 6px;
       }
       .card h3 {
-        margin: 5px 0 2px;
-        font-size: 14px;
+        margin: 4px 0 2px;
+        font-size: 12px;
       }
       .card p {
         margin: 2px 0;
         font-weight: bold;
         color: #ff416c;
-        font-size: 13px;
+        font-size: 11px;
       }
       .card button {
         background: linear-gradient(90deg, #ff416c, #ff4b2b);
         border: none;
-        padding: 6px 10px;
+        padding: 5px 8px;
         color: white;
-        font-size: 12px;
+        font-size: 11px;
         border-radius: 6px;
         cursor: pointer;
         transition: 0.3s;
