--- a/index.html
+++ b/index.html
@@ -24,64 +24,72 @@
         background: linear-gradient(90deg, #7b2ff7, #f107a3);
         color: #fff;
         text-align: center;
-        padding: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        padding: 15px;
         position: sticky;
         top: 0;
         z-index: 1000;
       }
       header img {
-        height: 100px;
+        height: 60px;
         border-radius: 12px;
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       }
+
+      /* Categories */
       /* Categories */
       .categories {
         display: flex;
-        justify-content: center;
-        gap: 20px;
-        padding: 20px;
+        gap: 12px;
+        padding: 10px;
         overflow-x: auto;
         background: #fff;
         border-radius: 12px;
-        margin: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        flex-wrap: wrap;
+        margin: 10px auto; /* center horizontally */
+        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+        white-space: nowrap;
+        justify-content: center; /* centers categories */
       }
+
       .category {
         text-align: center;
         cursor: pointer;
         transition: transform 0.3s;
-        flex: 0 0 auto;
+        flex: 0 0 auto; /* prevents stretching */
       }
+
       .category img {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         object-fit: cover;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
         transition: 0.3s;
       }
+      .category p {
+        font-size: 12px;
+        margin: 4px 0 0 0;
+      }
       .category:hover {
-        transform: translateY(-5px);
+        transform: translateY(-3px);
       }
       .category:hover img {
         transform: scale(1.1);
       }
+
       /* Slider */
       .slider {
         overflow: hidden;
         width: 100%;
-        margin: 30px 0;
+        margin: 20px 0;
       }
       .slide-track {
         display: flex;
         animation: scroll 25s linear infinite;
       }
       .slide {
-        width: 260px;
-        height: 180px;
-        margin: 0 10px;
+        width: 220px;
+        height: 150px;
+        margin: 0 8px;
         flex-shrink: 0;
         border-radius: 12px;
         overflow: hidden;
@@ -104,33 +112,35 @@
           transform: translateX(-50%);
         }
       }
+
       /* Video */
       video {
         display: block;
         max-width: 90%;
-        margin: auto;
-        border-radius: 20px;
+        margin: 20px auto;
+        border-radius: 12px;
         box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
       }
+
       /* Fixed Buttons */
       .fixed-buttons {
         position: fixed;
-        bottom: 20px;
+        bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
-        gap: 20px;
-        z-index: 999;
-        flex-wrap: wrap;
+        gap: 15px;
+        z-index: 9999;
+        flex-wrap: nowrap;
         justify-content: center;
       }
       .icon-button {
         background: linear-gradient(145deg, #ff416c, #ff4b2b);
         border: none;
-        padding: 15px;
+        padding: 12px;
         border-radius: 50%;
         cursor: pointer;
-        font-size: 20px;
+        font-size: 18px;
         color: #fff;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         transition: 0.3s;
@@ -148,23 +158,24 @@
         font-size: 12px;
         font-weight: bold;
         border-radius: 50%;
-        padding: 3px 7px;
+        padding: 2px 6px;
       }
+
       /* Sections */
       .section {
         display: flex;
-        gap: 20px;
-        margin: 20px;
-        padding: 20px;
+        gap: 15px;
+        margin: 15px;
+        padding: 15px;
         background: #fff;
-        border-radius: 15px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 12px;
+        box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
         flex-wrap: wrap;
       }
       .left,
       .right {
         flex: 1;
-        min-width: 250px;
+        min-width: 220px;
       }
       .middle {
         flex: 1;
@@ -173,57 +184,59 @@
       .middle img {
         max-width: 80%;
         border-radius: 12px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       }
       .highlight {
         color: #ff416c;
         font-weight: bold;
       }
+
       /* Start Button */
       .start-shopping {
         text-align: center;
-        margin: 30px;
+        margin: 20px;
       }
       .start-shopping button {
         background: linear-gradient(90deg, #ff416c, #ff4b2b);
         color: #fff;
         border: none;
-        padding: 15px 30px;
-        font-size: 18px;
+        padding: 12px 25px;
+        font-size: 16px;
         border-radius: 10px;
         cursor: pointer;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
         transition: 0.3s;
       }
       .start-shopping button:hover {
         transform: scale(1.05);
       }
 
-      /* 📱 Responsive Fixes */
+      /* 📱 Responsive */
       @media (max-width: 600px) {
         header img {
-          height: 60px;
+          height: 50px;
         }
         .category img {
-          width: 50px;
-          height: 50px;
+          width: 40px;
+          height: 40px;
+        }
+        .category p {
+          font-size: 10px;
+        }
+        .slide {
+          width: 180px;
+          height: 120px;
+          margin: 0 5px;
         }
         .section {
           flex-direction: column;
           text-align: center;
         }
         .middle img {
-          max-width: 100%;
+          max-width: 90%;
         }
         .start-shopping button {
           width: 100%;
-          font-size: 16px;
-        }
-      }
-      @media (min-width: 601px) and (max-width: 1024px) {
-        .section {
-          flex-direction: column;
-          text-align: center;
+          font-size: 14px;
         }
       }
     </style>
@@ -281,14 +294,12 @@
       <a href="./index.html"
         ><button class="icon-button"><i class="fas fa-home"></i></button
       ></a>
-      <a href="./cart.html"
-        ><button class="icon-button">
-          <i class="fas fa-shopping-cart"></i
-          ><span id="cartBadge" class="cart-badge" style="display: none"
-            >0</span
-          >
-        </button></a
-      >
+      <a href="./cart.html">
+        <button class="icon-button">
+          <i class="fas fa-shopping-cart"></i>
+          <span id="cartBadge" class="cart-badge" style="display: none">0</span>
+        </button>
+      </a>
       <a href="./support.html"
         ><button class="icon-button"><i class="fas fa-headset"></i></button
       ></a>
@@ -325,7 +336,7 @@
         window.location.href = `category.html?cat=${cat}`;
       }
 
-      // Slider
+      // Slider Images
       const sliderTrack = document.getElementById("sliderTrack");
       const images = JSON.parse(localStorage.getItem("sliderImages") || "[]");
       const fallback = [
@@ -341,15 +352,13 @@
         sliderTrack.appendChild(div);
       });
 
-      // Cart badge
+      // Cart Badge
       function updateCartBadge() {
         const cart = JSON.parse(localStorage.getItem("cart") || "[]");
         const total = cart.reduce((sum, item) => sum + item.qty, 0);
         const badge = document.getElementById("cartBadge");
-        if (total > 0) {
-          badge.style.display = "inline-block";
-          badge.textContent = total;
-        } else badge.style.display = "none";
+        badge.style.display = total ? "inline-block" : "none";
+        badge.textContent = total;
       }
       updateCartBadge();
     </script>
