--- a/cart.html
+++ b/cart.html
@@ -28,37 +28,33 @@
         z-index: 1000;
       }
       .cart-container {
-        padding: 10px;
-        max-width: 1000px;
+        padding: 15px;
+        max-width: 900px;
         margin: auto;
-      }
-      .table-wrapper {
-        overflow-x: auto;
-        border-radius: 12px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       }
       table {
         width: 100%;
         border-collapse: collapse;
         background: #fff;
+        border-radius: 12px;
+        overflow: hidden;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       }
       th,
       td {
-        padding: 10px;
+        padding: 12px;
         text-align: center;
-        font-size: 14px;
       }
       th {
         background: #ff416c;
         color: white;
-        font-size: 15px;
       }
       tr:nth-child(even) {
         background: #f9f9f9;
       }
       img {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         border-radius: 10px;
         object-fit: cover;
       }
@@ -66,35 +62,42 @@
         background: #0072ff;
         color: white;
         border: none;
-        padding: 4px 8px;
-        border-radius: 5px;
+        padding: 6px 12px;
+        border-radius: 6px;
         cursor: pointer;
-        margin: 0 2px;
-        font-size: 12px;
+        margin: 0 4px;
+        font-size: 16px;
+        transition: 0.2s;
+      }
+      .qty-btn:hover {
+        transform: scale(1.1);
       }
       .remove-btn {
         background: #dc3545;
         color: white;
         border: none;
-        padding: 5px 10px;
+        padding: 6px 12px;
         border-radius: 6px;
         cursor: pointer;
-        font-size: 12px;
+        transition: 0.2s;
+      }
+      .remove-btn:hover {
+        transform: scale(1.1);
       }
       .summary {
         text-align: right;
-        margin-top: 15px;
-        font-size: 16px;
+        margin-top: 20px;
+        font-size: 18px;
         font-weight: bold;
       }
       .checkout-btn {
         display: block;
-        margin: 15px auto;
-        padding: 10px 20px;
+        margin: 20px auto;
+        padding: 14px 30px;
         background: linear-gradient(90deg, #00c6ff, #0072ff);
         border: none;
         color: white;
-        font-size: 16px;
+        font-size: 18px;
         border-radius: 10px;
         cursor: pointer;
         transition: 0.3s;
@@ -105,20 +108,22 @@
       /* Fixed Buttons */
       .fixed-buttons {
         position: fixed;
-        bottom: 15px;
+        bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
-        gap: 15px;
+        gap: 20px;
         z-index: 999;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       .icon-button {
         background: linear-gradient(145deg, #ff416c, #ff4b2b);
         border: none;
-        padding: 12px;
+        padding: 15px;
         border-radius: 50%;
         cursor: pointer;
-        font-size: 18px;
+        font-size: 20px;
         color: #fff;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         transition: 0.3s;
@@ -139,50 +144,25 @@
         padding: 3px 7px;
       }
 
-      /* Responsive */
-      @media (max-width: 768px) {
-        th, td {
-          font-size: 12px;
-          padding: 6px;
-        }
-        img {
-          width: 40px;
-          height: 40px;
-        }
-        .qty-btn {
-          padding: 3px 6px;
-          font-size: 11px;
-        }
-        .remove-btn {
-          padding: 4px 8px;
-          font-size: 11px;
-        }
-        .checkout-btn {
+      /* Mobile adjustments */
+      @media (max-width: 600px) {
+        table th,
+        table td {
+          padding: 8px;
           font-size: 14px;
-          padding: 8px 16px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        th, td {
-          font-size: 11px;
-          padding: 4px;
         }
         img {
-          width: 35px;
-          height: 35px;
+          width: 50px;
+          height: 50px;
         }
-        .qty-btn, .remove-btn {
-          padding: 2px 5px;
-          font-size: 10px;
+        .qty-btn,
+        .remove-btn {
+          padding: 5px 10px;
+          font-size: 14px;
         }
         .checkout-btn {
-          font-size: 13px;
-          padding: 6px 12px;
-        }
-        .fixed-buttons {
-          gap: 10px;
-          bottom: 10px;
+          font-size: 16px;
+          padding: 12px 25px;
         }
       }
     </style>
@@ -191,36 +171,40 @@
     <header>🛒 Your Cart</header>
 
     <div class="cart-container">
-      <div class="table-wrapper">
-        <table id="cartTable">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Image</th>
-              <th>Price</th>
-              <th>Quantity</th>
-              <th>Subtotal</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
+      <table id="cartTable">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Image</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Subtotal</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
 
       <div class="summary" id="summary">Total: ₹0</div>
-      <button class="checkout-btn" onclick="checkout()">Proceed to Checkout</button>
+      <button class="checkout-btn" onclick="checkout()">
+        Proceed to Checkout
+      </button>
     </div>
 
     <!-- Fixed Buttons -->
     <div class="fixed-buttons">
-      <a href="./index.html"><button class="icon-button"><i class="fas fa-home"></i></button></a>
+      <a href="./index.html">
+        <button class="icon-button"><i class="fas fa-home"></i></button>
+      </a>
       <a href="./cart.html">
         <button class="icon-button">
           <i class="fas fa-shopping-cart"></i>
           <span id="cartBadge" class="cart-badge" style="display: none">0</span>
         </button>
       </a>
-      <a href="./support.html"><button class="icon-button"><i class="fas fa-headset"></i></button></a>
+      <a href="./support.html">
+        <button class="icon-button"><i class="fas fa-headset"></i></button>
+      </a>
     </div>
 
     <script>
@@ -233,20 +217,37 @@
         cart.forEach((item) => {
           const subtotal = item.qty * item.price;
           total += subtotal;
+
           const tr = document.createElement("tr");
           tr.innerHTML = `
             <td>${item.name}</td>
             <td><img src="${item.img}" alt="${item.name}"></td>
             <td>₹${item.price}</td>
             <td>
-              <button class="qty-btn" onclick="changeQty(${item.id},-1)">-</button>
+              <button class="qty-btn" data-id="${item.id}" data-action="minus">-</button>
               ${item.qty}
-              <button class="qty-btn" onclick="changeQty(${item.id},1)">+</button>
+              <button class="qty-btn" data-id="${item.id}" data-action="plus">+</button>
             </td>
             <td>₹${subtotal}</td>
-            <td><button class="remove-btn" onclick="removeItem(${item.id})">Remove</button></td>
+            <td><button class="remove-btn" data-id="${item.id}">Remove</button></td>
           `;
           tbody.appendChild(tr);
+        });
+
+        // Attach events
+        document.querySelectorAll(".qty-btn").forEach((btn) => {
+          btn.addEventListener("click", function () {
+            const id = this.dataset.id;
+            const action = this.dataset.action;
+            changeQty(id, action === "plus" ? 1 : -1);
+          });
+        });
+
+        document.querySelectorAll(".remove-btn").forEach((btn) => {
+          btn.addEventListener("click", function () {
+            const id = this.dataset.id;
+            removeItem(id);
+          });
         });
 
         document.getElementById("summary").textContent = "Total: ₹" + total;
@@ -255,11 +256,11 @@
 
       function changeQty(id, delta) {
         let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-        const product = cart.find((p) => p.id === id);
+        const product = cart.find((p) => p.id == id);
         if (product) {
           product.qty += delta;
           if (product.qty <= 0) {
-            cart = cart.filter((p) => p.id !== id);
+            cart = cart.filter((p) => p.id != id);
           }
         }
         localStorage.setItem("cart", JSON.stringify(cart));
@@ -268,7 +269,7 @@
 
       function removeItem(id) {
         let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-        cart = cart.filter((p) => p.id !== id);
+        cart = cart.filter((p) => p.id != id);
         localStorage.setItem("cart", JSON.stringify(cart));
         loadCart();
       }
