--- a/cart.html
+++ b/cart.html
@@ -28,9 +28,10 @@
         z-index: 1000;
       }
       .cart-container {
-        padding: 15px;
-        max-width: 900px;
+        padding: 10px;
+        max-width: 1000px;
         margin: auto;
+        overflow-x: auto;
       }
       table {
         width: 100%;
@@ -39,6 +40,7 @@
         border-radius: 12px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        min-width: 600px; /* ensures scroll on mobile */
       }
       th,
       td {
@@ -220,17 +222,17 @@
 
           const tr = document.createElement("tr");
           tr.innerHTML = `
-            <td>${item.name}</td>
-            <td><img src="${item.img}" alt="${item.name}"></td>
-            <td>₹${item.price}</td>
-            <td>
-              <button class="qty-btn" data-id="${item.id}" data-action="minus">-</button>
-              ${item.qty}
-              <button class="qty-btn" data-id="${item.id}" data-action="plus">+</button>
-            </td>
-            <td>₹${subtotal}</td>
-            <td><button class="remove-btn" data-id="${item.id}">Remove</button></td>
-          `;
+          <td>${item.name}</td>
+          <td><img src="${item.img}" alt="${item.name}"></td>
+          <td>₹${item.price}</td>
+          <td>
+            <button class="qty-btn" data-id="${item.id}" data-action="minus">-</button>
+            ${item.qty}
+            <button class="qty-btn" data-id="${item.id}" data-action="plus">+</button>
+          </td>
+          <td>₹${subtotal}</td>
+          <td><button class="remove-btn" data-id="${item.id}">Remove</button></td>
+        `;
           tbody.appendChild(tr);
         });
 
