--- a/order.html
+++ b/order.html
@@ -126,7 +126,7 @@
         <input name="name" placeholder="Name" required />
         <input name="contact" placeholder="Contact Number" required />
         <textarea name="address" placeholder="Address" required></textarea>
-        <input type="date" name="date" required />
+        <input type="date" name="date" placeholder="Delivery date" required />
 
         <!-- Live Location -->
         <input
@@ -248,3 +248,4 @@
     </script>
   </body>
 </html>
+
