--- a/admin.html
+++ b/admin.html
@@ -22,6 +22,7 @@
         align-items: center;
         justify-content: center;
         height: 100vh;
+        padding: 15px;
       }
       .login-box {
         background: #fff;
@@ -29,7 +30,8 @@
         border-radius: 15px;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
         text-align: center;
-        width: 300px;
+        width: 320px;
+        max-width: 100%;
       }
       .login-box h2 {
         margin-bottom: 20px;
@@ -119,6 +121,7 @@
         padding: 12px;
         margin-bottom: 12px;
         border-radius: 8px;
+        flex-wrap: wrap;
       }
       .product-card img {
         width: 60px;
@@ -129,6 +132,7 @@
       .product-info {
         flex: 1;
         margin-left: 10px;
+        min-width: 150px;
       }
       .toggle-btn {
         padding: 6px 12px;
@@ -144,6 +148,42 @@
       .not-available {
         background: #dc3545;
         color: white;
+      }
+
+      /* 📱 Mobile Theme */
+      @media (max-width: 600px) {
+        .login-box {
+          padding: 20px;
+          width: 100%;
+        }
+        header {
+          font-size: 20px;
+          padding: 12px;
+        }
+        .form-section,
+        .product-list {
+          padding: 15px;
+        }
+        .product-card {
+          flex-direction: column;
+          text-align: center;
+          gap: 8px;
+        }
+        .product-card img {
+          width: 80px;
+          height: 80px;
+        }
+        .product-info {
+          margin: 5px 0;
+        }
+        button {
+          width: 100%;
+          font-size: 14px;
+        }
+        .toggle-btn {
+          width: 100%;
+          margin: 3px 0;
+        }
       }
     </style>
   </head>
